<resources>
    <string name="app_name">Controle de estações</string>
    <string name="wifiName">Nome do WiFi</string>
    <string name="wifiPassword">Senha do WiFi</string>
    <string name="save">Salvar</string>
    <string name="registerStation">Cadastrar nova estação?</string>
    <string name="continuee">Continuar</string>
    <string name="stationName">Nome da estação</string>
    <string name="ibgeCode">Código IBGE da cidade</string>
    <string name="useStationGPS">Usar GPS da estação</string>
    <string name="homologationMode">Modo de homologação</string>
    <string name="connect">Conectar</string>
    <string name="loadingStations">Carregando estações cadastradas</string>
    <string name="bluetoothStatus">Status Bluetooth</string>
    <string name="cloudStatus">Status Nuvem</string>
    <string name="wifiStatus">Status WiFi</string>
    <string name="clockStatus">Status Relógio</string>
    <string name="gpsStatus">Status GPS</string>
    <string name="config">Configurar</string>
    <string name="successConfig">Alterações salvas com sucesso</string>
    <string name="errorSave">Erro ao salvar</string>
    <string name="noLocationSources">Não há fonte de localização disponível</string>
    <string name="close">Fechar</string>
    <string name="retry">Tentar\nNovamente</string>
    <string name="noBluetooth">Não há dispositivos pareáveis via Bluetooth</string>
    <string name="deniedPermissions">As permissões de acesso não foram concedidas.</string>
    <string name="gpsNoSignal">Sem sinal do GPS</string>
    <string name="unknownError">Erro desconhecido.</string>
    <string name="connectionError">Erro na conexão</string>
    <string name="searchError">Erro ao buscar as estações</string>
    <string name="statusBluetooth">Bluetooth ativado</string>
    <string name="statusCloudOK">Dados salvos na nuvem</string>
    <string name="statusCloudNo">Dados ainda não enviados</string>
    <string name="statusWiFiOK">Conectado à rede WiFI</string>
    <string name="statusWiFiNo">Não está conectado</string>
    <string name="statusClockGPS">Configurado pelo GPS</string>
    <string name="statusClockNTP">Sincronizado com a internet</string>
    <string name="statusClockNo">Relógio desconfigurado</string>
    <string name="statusGpsNo">Não há módulo GPS</string>
    <string name="statusGpsSignalOK">Sinal captado</string>
    <string name="statusGpsSignalNo">Sem sinal do GPS</string>
</resources>